[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/shroom_people1.png" type="Texture" id=1]
[ext_resource path="res://sprites/shroom_people2.png" type="Texture" id=2]
[ext_resource path="res://scripts/shroom.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 7.5 )

[node name="Shroom" type="AnimatedSprite"]
z_index = 2
frames = SubResource( 10 )
animation = "idle"
script = ExtResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="Free" type="Timer" parent="."]
one_shot = true

[connection signal="tree_entered" from="." to="." method="_on_Shroom_tree_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Free" to="." method="_on_Free_timeout"]
